# YP_ugc_sprint_1

app/: main.py
app/api/v1/: events.py
app/core/: config.py
app/services/: kafka.py
etl/db/: click.py  kafka.py
research/: README.md  clickhouse.json  clickhouse.py  data.py  docker-compose.yml  pyproject.toml  vertica.json  vertica.py  visualize.py
