[tool.poetry]
name = "research"
version = "0.1.0"
description = "Research on storage selection"
authors = ["Ilyas <Ilyas2707@yandex.ru>", "Dmitry Murzin <dima@murzin.life>", "Vladimir Lapp"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asynch = "^0.2.3"
more-itertools = "^10.2.0"
vertica-python = "^1.3.8"
pandas = "^2.2.1"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
